# NodeSeekMCP

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  supervisor.conf
nodeseekmcp/: __init__.py  app.py  cli.py  mcp_server.py  models.py  nodeseek.py  tasks.py  utils.py  uvicorn_worker.py
nodeseekmcp/templates/: index.html
scripts/: mcp_client.py
